[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WTracker"
version = "2024.06.15"
description = "CElagan tracker and Platform simulator"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
  {name = "Guy Cohen", email = ""},
  {name = "Gilad Freidkin", email = ""},
]

dependencies = [
  "tqdm",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn>=0.13",
  "ipywidgets",
  "ultralytics",
  "pip",
  "ipykernel",
  "opencv",
  "tensorboard",
  "mealpy",
  "pyqt"
]

requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Documentation = "https://giladfrid009.github.io/WTracker/"
Repository = "https://github.com/giladfrid009/WTracker"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.portray]
package = "wtracker"
modules = ["wtracker.sim", "wtracker.dataset", "wtracker.neural", "wtracker.utils", "wtracker.eval"]
docs_dir = "docs"
output_dir = "site"
